5-service-odoo-gke.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-gke-service
  labels:
    app: odoo-gke
spec:
  selector:
    app: odoo-gke
  ports:
    - name: http
#    - protocol: TCP
      port: 8069
      targetPort: 8069
