6-ingress-odoo-gke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-odoo-gke
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "720s"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "720s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "720s"
    nginx.ingress.kubernetes.io/gzip-types: "text/css text/scss text/plain text/xml application/xml application/json application/javascript"
    nginx.ingress.kubernetes.io/use-gzip: "true"
    nginx.ingress.kubernetes.io/location-snippet: |
      server {
        listen 443 ssl;
        server_name gke.aden.org;
        proxy_read_timeout 720s;
        proxy_connect_timeout 720s;
        proxy_send_timeout 720s;
      location / {
        # Add Headers for odoo proxy mode
        proxy_set_header X-Forwarded-Host $host;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_redirect off;
        proxy_pass http://odoo-gke-service:8069;
      }
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header 'Content-Security-Policy' 'upgrade-insecure-requests';
spec:
  rules:
    - host: gke.aden.org
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: odoo-gke-service
                port:
                  number: 8069
            path: /
  tls:
    - hosts:
      - gke.aden.org
      secretName: odoo-gke-tls
